MDL-56762 Theme: Fix browser main content scrollbars in RTL mode

--- a/theme/boost/scss/moodle/sticky-footer.scss
+++ b/theme/boost/scss/moodle/sticky-footer.scss
@@ -6,6 +6,7 @@ $footer-min-height: 130px !default;
 html,
 body {
     height: 100%;
+    overflow-y: auto;
 }
 
 #page-wrapper {
